# Linear-Feedback-Shift-Register

./: .gitignore  CMakeLists.txt  FibLFSR.cpp  FibLFSR.h  Makefile  PhotoMagic.cpp  ps1b-readme.txt
